# airgap-videowall

./: LICENSE  Makefile  README.md
agents/_common/: vw_cfg.py  vw_http.py
agents/big-player/: vw-big-player.service  vw_big_player.py
agents/sourcereg/: config.yaml  vw_sourcereg.py
agents/tile-player/: RASPBERRY_PI_NOTES.md  vw-tile-player@.service  vw_tile_player.py
agents/vdi-encoder/: requirements.txt  vw-vdi-encoder.service  vw_vdi_encoder.py
agents/wallctl/: config.yaml  vw-wallctl.service  vw_wallctl.py
charts/: _helpers.tpl
charts/audit/: Chart.yaml  values.yaml
charts/health/: Chart.yaml  values.yaml
charts/mgmt-api/: Chart.yaml  values.yaml
charts/policy/: Chart.yaml  values.yaml
charts/ui/: Chart.yaml  values.yaml
charts/vw-audit/: Chart.yaml
charts/vw-compositor/: Chart.yaml  values.yaml
charts/vw-config/: Chart.yaml  values.yaml
charts/vw-gw/: Chart.yaml  values.yaml
charts/vw-mgmt-api/: Chart.yaml
config/: schema.json
docs/: architecture-completeness-report.md  architecture-v2.md  architecture.md  deploy-existing-cluster.md  dynamic-config-compliance.md  operations.md  phase2-compliance-report.md  pi-image-builder.md  ports-allowlist.md  security.md  sizing.md  testing.md  whitepaper.md
scripts/: mirror-images.sh  offline-dep-mirror.sh  rollback.sh  rollout.sh
services/: mgmt_api_reconcile_helpers.py
services/vw-config/: Dockerfile  pyproject.toml
services/vw-config/app/: config_authority.py  main.py
services/vw-config/tests/: test_config_authority.py
tests/: requirements.txt  test_dynamic_config.py
(+166 files in other folders)
