[project]
name = "vw-config"
version = "0.3.0"
description = "Videowall Configuration Authority"
requires-python = ">=3.12"
license = "EUPL-1.2"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
